package common.protocol.global;

message AnnounceMasterInfo
{
	required int32 master_id = 1;
}
